Dummy_Package_for_scratch_org/main/default/objects/Promotion__c/fields/Back_Promotion__c.field-meta.xml
<CustomField>
    <fullName>Back_Promotion__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked if the promotion is from a higher environment to a lower environment in the deployment flow.</description>
    <inlineHelpText>Select this checkbox if you are promoting from a higher to a lower environment in the pipeline.</inlineHelpText>
    <label>Is Back-Promotion</label>
    <type>Checkbox</type>
</CustomField>