Dummy_Package_for_scratch_org/main/default/objects/Promotion__c/fields/Completed__c.field-meta.xml
<CustomField>
    <fullName>Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This field is checked by Copado once the promotion is merged and deployed successfully for multi-cloud platform.</inlineHelpText>
    <label>Completed</label>
    <type>Checkbox</type>
</CustomField>