Dummy_Package_for_scratch_org/main/default/objects/Promotion__c/fields/Connection_Behavior__c.field-meta.xml
<CustomField>
    <fullName>Connection_Behavior__c</fullName>
    <label>Connection Behavior</label>
    <length>18</length>
    <type>Text</type>
</CustomField>