Dummy_Package_for_scratch_org/main/default/objects/Promotion__c/fields/Create_Full_Permission_Sets_Step__c.field-meta.xml
<CustomField>
    <fullName>Create_Full_Permission_Sets_Step__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Select this checkbox if you wish to move added profiles to a Full Profiles step. Doing this will remove the profiles from the Metadata step.</inlineHelpText>
    <label>Create Full Permission Sets Step</label>
    <type>Checkbox</type>
</CustomField>