Dummy_Package_for_scratch_org/main/default/objects/Promotion__c/fields/Last_Promotion_Execution_Id__c.field-meta.xml
<CustomField>
    <fullName>Last_Promotion_Execution_Id__c</fullName>
    <label>Last Promotion Execution Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>