Dummy_Package_for_scratch_org/main/default/objects/Promotion__c/fields/Merge_Conflict__c.field-meta.xml
<CustomField>
    <fullName>Merge_Conflict__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Indicates that this promotion includes a manual conflict resolution.</inlineHelpText>
    <label>Merge Conflict</label>
    <type>Checkbox</type>
</CustomField>