Dummy_Package_for_scratch_org/main/default/objects/Promotion__c/fields/Order_by__c.field-meta.xml
<CustomField>
    <fullName>Order_by__c</fullName>
    <inlineHelpText>Populate this field if you want to set an ascending or descending merge order for the selected user stories in a deployment. For example, status__c asc</inlineHelpText>
    <label>Order User Stories by</label>
    <length>255</length>
    <type>Text</type>
</CustomField>