Dummy_Package_for_scratch_org/main/default/objects/Promotion__c/fields/Platform__c.field-meta.xml
<CustomField>
    <fullName>Platform__c</fullName>
    <formula>IF( NOT(ISBLANK( Project__c )) ,  TEXT(Project__r.Deployment_Flow__r.Platform__c) ,  IF( NOT(ISBLANK( Release__c )),  TEXT(Release__r.Project__r.Deployment_Flow__r.Platform__c) , &apos;Salesforce&apos;) )</formula>
    <inlineHelpText>This field auto-populates and displays the pipeline platform.</inlineHelpText>
    <label>Platform</label>
    <type>Text</type>
</CustomField>