Dummy_Package_for_scratch_org/main/default/objects/Promotion__c/fields/Send_Deployment_Complete_email__c.field-meta.xml
<CustomField>
    <fullName>Send_Deployment_Complete_email__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Select this checkbox if you want the promotion owner to receive an email notification when the promotion is complete.</inlineHelpText>
    <label>Notify When Complete</label>
    <type>Checkbox</type>
</CustomField>