Dummy_Package_for_scratch_org/main/default/objects/Promotion__c/fields/Source_Environment__c.field-meta.xml
<CustomField>
    <fullName>Source_Environment__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Source Environment</label>
    <referenceTo>Environment__c</referenceTo>
    <relationshipLabel>Promotions</relationshipLabel>
    <relationshipName>Promotions</relationshipName>
    <type>Lookup</type>
</CustomField>