Dummy_Package_for_scratch_org/main/default/objects/Promotion__c/validationRules/Scratch_Orgs_Disabled_for_Back_Promoting.validationRule-meta.xml
<ValidationRule>
    <fullName>Scratch_Orgs_Disabled_for_Back_Promoting</fullName>
    <active>true</active>
    <errorConditionFormula>AND(Back_Promotion__c == true,ISPICKVAL(Destination_Org_Credential__r.Org_Type__c,&apos;Scratch Org&apos;))</errorConditionFormula>
    <errorMessage>Back Promotions to Scratch Orgs are not allowed</errorMessage>
</ValidationRule>