Dummy_Package_for_scratch_org/main/default/objects/Promotion__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Destination_Environment__c</columns>
    <columns>Project__c</columns>
    <columns>Release__c</columns>
    <columns>Source_Environment__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>